<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gs_1"
    tools:context=".SignUpDetailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/binbean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/pretendard_black"
        android:text="@string/title_binbean"
        android:textColor="@color/title_color"
        android:textSize="22.5sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="38.52dp"
        android:layout_height="47.96dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/binbean" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/nickname"
        android:textColor="@color/gs_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/id"
        android:textColor="@color/gs_5"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/password"
        android:textColor="@color/gs_5"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/id"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:background="@drawable/profile_background"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binbean"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/profile_chair_icon" />

    <TextView
        android:id="@+id/photo_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pretendard_extralight"
        android:text="@string/add_profile_photo"
        android:textColor="#252424"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <EditText
        android:id="@+id/nickname_window"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_shadow_background"
        android:elevation="2dp"
        android:fontFamily="@font/pretendard_semibold"
        android:hint="@string/nickname_condition"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/gs_sub"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nickname"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_window"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_shadow_background"
        android:elevation="2dp"
        android:fontFamily="@font/pretendard_semibold"
        android:hint="@string/id_example"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/gs_sub"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname_window" />

    <EditText
        android:id="@+id/ps_window"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_shadow_background"
        android:elevation="2dp"
        android:fontFamily="@font/pretendard_semibold"
        android:hint="@string/password_condition"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/gs_sub"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/id_window" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/complete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/complete"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ps_window" />

</androidx.constraintlayout.widget.ConstraintLayout>